# hw3-joshawat

./: .gitignore  Makefile  README.md  ai_documentation.txt  environment.yml  myst.yml  pyproject.toml
.github/workflows/: deploy.yml
ligotools/: utils.py
ligotools/tests/: test_readligo.py  test_utils.py
