[build-system]
requires = [
    "setuptools >= 70",
    "numpy",  
]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
authors = [
  {name = "Ligo Scientific Collaboration (LSC)"},
  {name = "Joshua Gonzales"},  
]
description = "Tools for LIGO gravitational wave data analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib", 
    "h5py",
    "librosa",
]

version = "0.1.0"

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

keywords = ["LIGO", "gravitational-waves", "astrophysics"]


[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-joshawat"  

[tool.setuptools]
packages = ["ligotools"]

